--- a/index.html
+++ b/index.html
@@ -353,7 +353,10 @@
             />
           </div>
           <h2>Quality</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum
+            hic veniam eligendi minima
+          </p>
           <a href="#">More</a>
         </div>
         <div class="box time">
@@ -364,7 +367,10 @@
             />
           </div>
           <h2>time</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum
+            hic veniam eligendi minima
+          </p>
           <a href="#">More</a>
         </div>
         <div class="box passion">
@@ -375,12 +381,136 @@
             />
           </div>
           <h2>passion</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum
+            hic veniam eligendi minima
+          </p>
           <a href="#">More</a>
         </div>
       </div>
     </section>
     <!-- End Features -->
+    <!-- Start Testimonials -->
+    <section class="testimonials" id="testimonials">
+      <h2 class="main-title">testimonials</h2>
+      <div class="container">
+        <div class="box">
+          <img
+            src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/avatar-01.png"
+            alt=""
+          />
+          <h3>Mohamed Farag</h3>
+          <span>Full Stack Developer</span>
+          <div class="rate">
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="box">
+          <img
+            src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/avatar-02.png"
+            alt=""
+          />
+          <h3>Mohamed Ibrahim</h3>
+          <span>Full Stack Developer</span>
+          <div class="rate">
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="box">
+          <img
+            src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/avatar-03.png"
+            alt=""
+          />
+          <h3>Shady Nabil</h3>
+          <span>Full Stack Developer</span>
+          <div class="rate">
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="box">
+          <img
+            src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/avatar-04.png"
+            alt=""
+          />
+          <h3>Amr Hendawy</h3>
+          <span>Full Stack Developer</span>
+          <div class="rate">
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="box">
+          <img
+            src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/avatar-05.png"
+            alt=""
+          />
+          <h3>Sherief Ashraf</h3>
+          <span>Full Stack Developer</span>
+          <div class="rate">
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+        <div class="box">
+          <img
+            src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/avatar-06.png"
+            alt=""
+          />
+          <h3>Osama Mohamed<h3>
+          <span>Full Stack Developer</span>
+          <div class="rate">
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="filled fa-solid fa-star"></i>
+            <i class="fa-regular fa-star"></i>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et
+            reiciendis voluptatum, amet est natus quaerat ducimus
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- End Testimonials -->
     <script>
       document.querySelector(".logo a").innerHTML = "elzero";
       document.title = "Elzero";
