--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/avatar-06.png"
             alt=""
           />
-          <h3>Osama Mohamed<h3>
+          <h3>Osama Mohamed</h3>
           <span>Full Stack Developer</span>
           <div class="rate">
             <i class="filled fa-solid fa-star"></i>
@@ -511,6 +511,315 @@
       </div>
     </section>
     <!-- End Testimonials -->
+    <!-- Start Team Members -->
+    <section class="team" id="team">
+      <h2 class="main-title">Tean Members</h2>
+      <div class="container">
+        <div class="box">
+          <div class="data">
+            <img
+              src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/team-01.jpg"
+              alt=""
+            />
+            <div class="social">
+              <a href="#">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img
+              src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/team-02.jpg"
+              alt=""
+            />
+            <div class="social">
+              <a href="#">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img
+              src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/team-03.jpg"
+              alt=""
+            />
+            <div class="social">
+              <a href="#">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img
+              src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/team-04.jpg"
+              alt=""
+            />
+            <div class="social">
+              <a href="#">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img
+              src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/team-05.png"
+              alt=""
+            />
+            <div class="social">
+              <a href="#">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img
+              src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/team-06.png"
+              alt=""
+            />
+            <div class="social">
+              <a href="#">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img
+              src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/team-07.jpg"
+              alt=""
+            />
+            <div class="social">
+              <a href="#">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="data">
+            <img
+              src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/team-08.jpg"
+              alt=""
+            />
+            <div class="social">
+              <a href="#">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+          <div class="info">
+            <h3>Name</h3>
+            <p>Simple Short Description</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Team Members -->
+    <!-- Start Services -->
+    <section class="services" id="services">
+      <h2 class="main-title">Services</h2>
+      <div class="container">
+        <div class="box">
+          <i class="fas fa-user-shield fa-4x"></i>
+          <h3>Security</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-tools fa-4x"></i>
+          <h3>Fixing Issues</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-map-marked-alt fa-4x"></i>
+          <h3>Location</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-laptop-code fa-4x"></i>
+          <h3>Coding</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-palette fa-4x"></i>
+          <h3>Security</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-bullhorn fa-4x"></i>
+          <h3>Marketing</h3>
+          <div class="info">
+            <a href="#">Details</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Services -->
+    <!-- Start Skills -->
+    <section class="our-skills" id="our-skills">
+      <div class="container">
+        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/skills.png" alt="">
+        <div class="skills">
+          <div class="skill">
+            <h3>
+              Html
+              <span>80</span>
+            </h3>
+            <div class="the-progress"></div>
+              <span style="width: 80%;" data-width="80%"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>
+              Html
+              <span>80</span>
+            </h3>
+            <div class="the-progress"></div>
+              <span style="width: 80%;" data-width="80%"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>
+              Html
+              <span>80</span>
+            </h3>
+            <div class="the-progress"></div>
+              <span style="width: 80%;" data-width="80%"></span>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>
+              Html
+              <span>80</span>
+            </h3>
+            <div class="the-progress"></div>
+              <span style="width: 80%;" data-width="80%"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Skills -->
     <script>
       document.querySelector(".logo a").innerHTML = "elzero";
       document.title = "Elzero";
