--- a/index.html
+++ b/index.html
@@ -725,27 +725,128 @@
           <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/work-steps-1.png" alt="">
           <div class="text">
             <h3>Business Analysis</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum
+              recusandae debitis vel</p>
           </div>
         </div>
         <div class="box">
           <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/work-steps-2.png" alt="">
           <div class="text">
             <h3>Architecture</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum
+              recusandae debitis vel</p>
           </div>
         </div>
         <div class="box">
           <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/work-steps-3.png" alt="">
           <div class="text">
             <h3>Developement</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum
+              recusandae debitis vel</p>
           </div>
         </div>
       </div>
     </div>
   </div>
   <!-- End Work Steps -->
+  <!-- Start Event -->
+  <section class="event" id="event">
+    <h2 class="main-title">Latest Events</h2>
+    <div class="dots dots-up"></div>
+    <div class="dots dots-down"></div>
+    <div class="container">
+      <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/events.png" alt="">
+      <div class="info">
+        <div class="time">
+          <div class="unit">
+            <span>0-617</span>
+            <span>Days</span>
+          </div>
+          <div class="unit">
+            <span>0-21</span>
+            <span>Hours </span>
+          </div>
+          <div class="unit">
+            <span>0-30</span>
+            <span>Minutes</span>
+          </div>
+          <div class="unit">
+            <span>0-39</span>
+            <span>Seconds</span>
+          </div>
+        </div>
+        <h2 class="title">Tech Masters Event 2021</h2>
+        <p class="discription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero tenetur doloremque iusto
+          ut adipisci quam ratione aliquam excepturi nulla in harum, veritatis porro
+        </p>
+      </div>
+      <div class="subscribe">
+        <form action="">
+          <input type="email" name="subscribe" placeholder="Enter Your Email">
+          <input type="submit" value="Subscribe">
+        </form>
+      </div>
+    </div>
+  </section>
+  <!-- End Event -->
+  <!-- Start Pricing -->
+  <section class="pricing" id="pricing">
+    <h2 class="main-title">Pricing Plans</h2>
+    <div class="dots dots-up"></div>
+    <div class="dots dots-down"></div>
+    <div class="container">
+      <div class="box">
+        <h3>Basic</h3>
+        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/hosting-basic.png" alt="">
+        <div class="price">
+          <span class="amount">$15</span>
+          <span class="time">Per Month</span>
+        </div>
+        <ul>
+          <li>10GB HDD Space</li>
+          <li>5 Email Addresses</li>
+          <li>2 Subdomains</li>
+          <li>4 Databases</li>
+          <li>Basic Support</li>
+        </ul>
+        <a href="#">Choose Plan</a>
+      </div>
+      <div class="box popular">
+        <div class="label">Most Popular</div>
+        <h3>Advanced</h3>
+        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/hosting-advanced.png" alt="">
+        <div class="price">
+          <span class="amount">$25</span>
+          <span class="time">Per Month</span>
+        </div>
+        <ul>
+          <li>20GB HDD Space</li>
+          <li>10 Email Addresses</li>
+          <li>5 Subdomains</li>
+          <li>8 Databases</li>
+          <li>Advanced Support</li>
+        </ul>
+        <a href="#">Choose Plan</a>
+      </div>
+      <div class="box">
+        <h3>Professional</h3>
+        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/hosting-professional.png" alt="">
+        <div class="price">
+          <span class="amount">$45</span>
+          <span class="time">Per Month</span>
+        </div>
+        <ul>
+          <li>50GB HDD Space</li>
+          <li>20 Email Addresses</li>
+          <li>10 Subdomains</li>
+          <li>20 Databases</li>
+          <li>Professional Support</li>
+        </ul>
+        <a href="#">Choose Plan</a>
+      </div>
+    </div>
+  </section>
+  <!-- End Pricing -->
   <script>
     document.querySelector(".logo a").innerHTML = "elzero";
     document.title = "Elzero";
