--- a/index.html
+++ b/index.html
@@ -798,11 +798,11 @@
       <div class="box">
         <h3>Basic</h3>
         <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/hosting-basic.png" alt="">
-        <div class="price"> 
+        <div class="price">
           <span class="amount">$15</span>
           <span class="time">Per Month</span>
         </div>
-        <ul> 
+        <ul>
           <li>10GB HDD Space</li>
           <li>5 Email Addresses</li>
           <li>2 Subdomains</li>
@@ -847,6 +847,75 @@
     </div>
   </section>
   <!-- End Pricing -->
+  <!-- Start footer -->
+  <footer>
+    <div class="container">
+      <div class="box">
+        <h3>Elzero</h3>
+        <a href="#">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="#">
+          <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a href="#">
+          <i class="fa-brands fa-youtube"></i>
+        </a>
+        <p class="text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus nulla rem, dignissimos iste aspernatur
+        </p>
+      </div>
+      <div class="box">
+        <ul>
+          <li>
+            <a href="#">Impotant Link</a>
+          </li>
+          <li>
+            <a href="#">Impotant Link</a>
+          </li>
+          <li>
+            <a href="#">Impotant Link</a>
+          </li>
+          <li>
+            <a href="#">Impotant Link</a>
+          </li>
+          <li>
+            <a href="#">Impotant Link</a>
+          </li>
+        </ul>
+      </div>
+      <div class="box">
+        <div>
+          <i class="fas fa-map-marker-alt fa-fw"></i>
+          <p>Egypt, Giza, Inside The Sphinx, Room Number 220 </p>
+        </div>
+        <div>
+          <i class="far fa-clock fa-fw"></i>
+          <p>Business Hours: From 10:00 To 18:00
+          </p>
+        </div>
+        <div>
+          <i class="fas fa-phone-volume fa-fw"></i>
+          <p>
+            +20123456789<br>
+            +20198765432
+          </p>
+        </div>
+      </div>
+      <div class="box">
+        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-01.png" alt="">
+        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-02.png" alt="">
+        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-03.jpg" alt="">
+        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-04.png" alt="">
+        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-05.jpg" alt="">
+        <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-06.png" alt="">
+      </div>
+    </div>
+    <p class="copyright">
+      Made With &lt;3 By Elzero
+    </p>
+  </footer>
+  <!-- End footer -->
   <script>
     document.querySelector(".logo a").innerHTML = "elzero";
     document.title = "Elzero";
