--- a/index.html
+++ b/index.html
@@ -912,18 +912,18 @@
           ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel similique
           laborum dicta aperiam odit doloribus corporis.
         </p>
-        <img decoding="async" src="imgs/discount.png" alt="" />
+        <img decoding="async" src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/discount.png" alt="" />
       </div>
     </div>
     <div class="form">
       <div class="content">
         <h2>Request A Discount</h2>
         <form action="">
-          <input class="input" type="text" placeholder="Your Name" name="name" />
-          <input class="input" type="email" placeholder="Your Email" name="email" />
-          <input class="input" type="text" placeholder="Your Phone" name="mobile" />
+          <input type="text" placeholder="Your Name" name="name" />
+          <input type="email" placeholder="Your Email" name="email" />
+          <input type="text" placeholder="Your Phone" name="mobile" />
           <textarea class="input" placeholder="Tell Us About Your Needs" name="message"></textarea>
-          <input type="submit" value="Send" />
+          <input type="submit" value="Send" class="btn"/>
         </form>
       </div>
     </div>
