--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul>
           <li><a href="#articles">Articles</a></li>
           <li><a href="#gallery">gallery</a></li>
-          <li><a href="#featrues">featrues</a></li>
+          <li><a href="#features">features</a></li>
           <li>
             <a id="other">other links</a>
             <!-- Start Menu Page -->
@@ -42,63 +42,63 @@
               <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/megamenu.png" alt="" />
               <ul>
                 <li>
-                  <a href="">
+                  <a href="#testimonials">
                     <i class="far fa-comments fa-fw"></i>
                     Testimonials
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="#team">
                     <i class="far fa-user fa-fw"></i>
                     Team Members
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="#services">
                     <i class="far fa-building fa-fw"></i>
-                    Sevices
+                    Services
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="#our-skills">
                     <i class="far fa-check-circle fa-fw"></i>
                     Our Skills
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="#work-steps">
                     <i class="far fa-clipboard fa-fw"></i>
-                    >How It Works
+                    How It Works
                   </a>
                 </li>
               </ul>
               <ul>
                 <li>
-                  <a href="">
+                  <a href="#event">
                     <i class="far fa-calendar-alt fa-fw"></i>
                     Events
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="#pricing">
                     <i class="fas fa-server fa-fw"></i>
                     Peicing Place
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="#video">
                     <i class="far fa-play-circle fa-fw"></i>
                     Top Video
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="#stats">
                     <i class="far fa-chart-bar fa-fw"></i>
                     Stats
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="#discount">
                     <i class="fas fa-percent fa-fw"></i>
                     Requset A Discount
                   </a>
@@ -868,7 +868,8 @@
           </ul>
         </div>
         <div class="preview">
-          <img decoding="async" src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/video-preview.jpg" alt="" />
+          <img decoding="async"
+            src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/video-preview.jpg" alt="" />
           <div class="info">Everything About The Virtual Hosts</div>
         </div>
       </div>
@@ -912,7 +913,8 @@
           ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel similique
           laborum dicta aperiam odit doloribus corporis.
         </p>
-        <img decoding="async" src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/discount.png" alt="" />
+        <img decoding="async" src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/discount.png"
+          alt="" />
       </div>
     </div>
     <div class="form">
@@ -923,7 +925,7 @@
           <input type="email" placeholder="Your Email" name="email" />
           <input type="text" placeholder="Your Phone" name="mobile" />
           <textarea class="input" placeholder="Tell Us About Your Needs" name="message"></textarea>
-          <input type="submit" value="Send" class="btn"/>
+          <input type="submit" value="Send" class="btn" />
         </form>
       </div>
     </div>
